# bear

./: .gitignore  Cargo.toml  README.md  runner.sh
bear-app/: Cargo.toml
bear-app/src/: devices.rs  main.rs
bear-ass/: Cargo.toml
bear-ass/src/: assembler.rs  bearasm.pest  cli.rs  lib.rs  main.rs  processor.rs
bear-ass/src/parser/: ast.rs  mod.rs
bear-vm/: Cargo.toml
bear-vm/src/: cell.rs  device.rs  lib.rs  util.rs  vm.rs
roms/: example.bear  hello.bear
vim/: bear.vim
