[package]
name = "bear-app"
version = "0.1.0"
authors = ["John Connor <john.theman.connor@gmail.com>"]
edition = "2018"

[dependencies]
bear-vm = { path = "../bear-vm" }
bear-ass = { path = "../bear-ass" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.14"
termion = "1.5"
cassowary = "0.3"
unicode-width = "0.1.8"
clap = "2"
zmq = "0.9"
rustyline = "7.1.0"
