[package]
name = "bear-app"
version = "0.1.0"
authors = ["John Connor <john.theman.connor@gmail.com>"]
edition = "2018"

[dependencies]
bear-vm = { path = "../bear-vm" }
bear-ass = { path = "../bear-ass" }
serde = { version = "1.0", features = ["derive"] }
clap = "2"
colored = "2"
serde_json = "1.0"
