[package]
name = "bear-ass"
version = "0.1.0"
authors = ["John Connor <john.theman.connor@gmail.com>"]
edition = "2018"

[lib]
name = "bear_ass"
path = "src/lib.rs"

[[bin]]
name = "bear-ass"
path = "src/main.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bear-vm = { path = "../bear-vm" }
